--- a/PIc/index.html
+++ b/PIc/index.html
@@ -29,7 +29,7 @@
         <div id="pic"></div>
             <h1 class="headings">ABOUT ME</h1>
             <div id="pic"></div>
-            <img src="C:\Users\user\Downloads\PIc\125031630_712294799400778_7490241639529464410_n.jpg" alt="shaneika picture">
+            <img src="/PIc/125031630_712294799400778_7490241639529464410_n.jpg" alt="shaneika picture">
             <div id="intro">
                 <h2>SHANIEKA SANTILLANA</h2>
                 <p>
@@ -51,22 +51,22 @@
         <p>Please click image to open HTML</HTML></p>
         <div class="gallery">
             <a href="file:///C:/Users/user/Desktop/portfolio/HTML/6thSide%20Dice%20Act.html" target="_blank">
-                <img src="../PIc/Doc1.1.jpg" alt="6th Side Dice Activity" width="580px">
+                <img src="/PIc/Doc1.1.jpg" alt="6th Side Dice Activity" width="580px">
             </a>
             <a href="file:///C:/Users/user/Desktop/portfolio/HTML/Selector%20Act.html" target="_blank">
-                <img src="../PIc/Doc2-page0001.jpg" alt="HTML Selector" width="580px">
+                <img src="/PIc/Doc2-page0001.jpg" alt="HTML Selector" width="580px">
             </a>
             <a href="file:///C:/Users/user/Desktop/portfolio/HTML/HTML%20COLOR.html" target="_blank">
-                <img src="../PIc/Doc3-page0001.jpg" alt="HTML COLOR" width="580px">
+                <img src="/PIc/Doc3-page0001.jpg" alt="HTML COLOR" width="580px">
             </a>
             <a href="file:///C:/Users/user/Desktop/portfolio/HTML/Resume2.0.html" target="_blank">
-                <img src="../PIc/Doc5-page0001.jpg" alt="Resume2" width="580px">
+                <img src="/PIc/Doc5-page0001.jpg" alt="Resume2" width="580px">
             </a>
             <a href="file:///C:/Users/user/Downloads/HTML%20HELLO%20WORLD.html" target="_blank">
-                <img src="../PIc/Doc6.jpg" alt="Hello World" width="580px">
+                <img src="/PIc/Doc6.jpg" alt="Hello World" width="580px">
             </a>
             <a href="file:///C:/Users/user/Downloads/HTML%20FLAG.html" target="_blank">
-                <img src="../PIc/Doc7.jpg" alt="HTML Flag" width="580px">
+                <img src="/PIc/Doc7.jpg" alt="HTML Flag" width="580px">
             </a>
         </div>
     </section>
